# rdk-appstore-server

./: CMakeLists.txt  Readme  bundle.sh  file_handling.c  rdk-appstore-server.c  request_handling.c  server.c
include/: appstoreserver.h  file_handling.h  microhttpd_wrapper.h  request_handling.h  server.h
source/: file_operations.c  json_operations.c  main.c  microhttpd_wrapper.c  network_operations.c  request_handling.c  server.c
